# HExoskeleton

./: .dockerignore  .editorconfig  .env.example  .env.mcp.example  .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INTENT.md  MANUAL_SETUP.md  Makefile  OMNIGRAPH_SPEC.md  PLAN.md  QUICKSTART.md  README.md  TROUBLESHOOTING.md  Vagrantfile  codegraph.toml  docker-compose.yml  history.txt  langgraph.json  mise.toml  project_spec.md  pyproject.toml  release-please-config.json
.agent/: ANTIGRAVITY_QUICKSTART.md  MCP_CONFIG_GUIDE.md  SETUP_COMPLETE.md  context.md  mcp_config.json  rules.md
.agent/workflows/: bootstrap.md  mcp-docker.md  run-option-c.md  setup-boilerplate.md
.claude/: settings.json
.claude/agents/: arch-review.md  bootstrap.md  clean.md  codebase-mapper.md  commit.md  context-health-monitor.md  create-pr.md  debugger.md  executor.md  impact-analysis.md  plan-checker.md  planner.md  (+2 more)
.gemini/: GEMINI.md
.gsd/: ARCHITECTURE.md  CHANGELOG.md  PATTERNS.md  SPEC.md  STACK.md  STATE.md  context-config.yaml
docs/: AGENTIC_ARCHITECTURE.md  ANTIGRAVITY_AGENT_GUIDE.md  BUILD.md  GITHUB-WORKFLOW.md  HOOKS.md  MCP.md  MEMORY.md  WORKFLOWS.md  ai-onboarding.md  mcp-guide.md
gsd-plugin/: .mcp.json  README.md
langchain_tools/: cli.py  config.py
launcher/: app.py
runtime/: app.py
scripts/: _json_parse.sh  bootstrap.sh  build-antigravity.sh  build-opencode.sh  build-plugin.sh  compact-context.sh  index-codebase.sh  md-recall-memory.sh  md-store-memory.sh  migrate-memories.py  verify-feedback-loop.js
src/: main.py
(+124 files in other folders)
