[project]
name = "boilerplate"
version = "0.1.0"
description = "AI agent development boilerplate with CodeGraph and GSD methodology"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
